 - Debugger: Don't skip undefined instructions when debugger attached
 - Debugger: Close trace log when done tracing
 - Debugger: Fix change watchpoints (fixes mgba.io/i/1947)
 - Debugger: Call CLI debugger system init
 - FFmpeg: Fix some small memory leaks
 - FFmpeg: Fix encoding of time base
 - GB: Fix crash when changing ROM while in banked address space
 - GB: Fix loading model overrides
 - GB Serialize: Fix crash when loading pre-0.7 SGB savestates
 - GB Video: Fix SGB video logs
 - GB Video: Discard SGB packets in non-SGB mVLs
 - GB Video: Fix deserializing negative LX state
 - GB Video: Don't rendering negative batches
 - GBA: Fix loading multiboot ELF files (fixes mgba.io/i/1949)
 - GBA: Fix loading subsequent save files (fixes mgba.io/i/2067)
 - mGUI: Don't attempt to preload files larger than can fit in RAM
 - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
 - Qt: Fix static compilation in MinGW (fixes mgba.io/i/1769)
 - Qt: Fix a race condition in the frame inspector
 - Qt: Load/save bytes from memory viewer in the order visible (fixes mgba.io/i/1900)
 - Qt: Fix running proxied video if it gets pushed to the main thread
 - Qt: Fix game display sometimes disappearing after closing load/save state screen
 - Qt: Fix cancelling pausing before the frame ends
 - Qt: Fix gamepad event dispatching (fixes mgba.io/i/1922)
 - Qt: Pre-attach GDB stub when launching with -g (fixes mgba.io/i/1950)
 - Qt: Fix crash when editing shortcuts with none selected (fixes mgba.io/i/1964)
 - Qt: Fix crashing when no OpenGL context can be obtained
 - Qt: Fix issues with I/O viewer not properly synchronizing state
 - Qt: Fix loading a new game crashing on Wayland (fixes mgba.io/i/1992)
 - Qt: Fix inability to clear hat bindings
 - SM83: Simplify register pair access on big endian
 - SM83: Disassemble STOP as one byte
 - Switch: Fix GB game height in pixel accurate mode (fixes mgba.io/i/2073)
 - Wii: Fix crash on unloading irregularly sized GBA ROMs
Misc: